--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.port=8990
 ## Security
 ##spring.security.user.name=test
 ##spring.security.user.password=test
+
+## DataBase
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/university
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
