Added Spring Security to generate a token at /university/login and use it to validate protected endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 server.port=8990
 
 ## Security
-##spring.security.user.name=test
-##spring.security.user.password=test
+#spring.security.user.name=test
+#spring.security.user.password=test
+app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
 
 ## DataBase
 spring.jpa.hibernate.ddl-auto=update
