--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,11 @@
 			<artifactId>kafka-avro-serializer</artifactId>
 			<version>3.3.1</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>joda-time</groupId>-->
-<!--			<artifactId>joda-time</artifactId>-->
-<!--			<version>2.12.1</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.12.1</version>
+		</dependency>
 
 		<!-- Gson -->
 		<dependency>
