--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8990
 app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
 
 ## DataBase
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/university
 spring.datasource.username=springuser
