--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8990
 #spring.security.user.password=test
 app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
 
-## DataBase
+## Database
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/university
