Now the application can be converted into an image compatible with docker-compose configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 ## Server
 server.port=8990
-
-## Security
-#spring.security.user.name=test
-#spring.security.user.password=test
-app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
+localhost.ip=${LOCALHOST_IP:127.0.0.1}
 
 ## Database
 spring.jpa.hibernate.ddl-auto=validate
@@ -13,3 +9,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/university
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## Kafka
+kafka.bootstrap.servers.port=${BOOTSTRAP_SERVERS_PORT:9092}
+kafka.schema.registry.port=${SCHEMA_REGISTRY_PORT:8081}
