--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,13 @@
 ## Test profile
 spring.profiles.active=dev
+localhost.ip=${LOCALHOST_IP:127.0.0.1}
 
 ## Database
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/university
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## Kafka
+kafka.bootstrap.servers.port=${BOOTSTRAP_SERVERS_PORT:9092}
+kafka.schema.registry.port=${SCHEMA_REGISTRY_PORT:8081}
