Small changes in application.properties to better express which IP is required in Kafka configuration. README.md updated with last deployment information.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 ## Server
 server.port=8990
-localhost.ip=${LOCALHOST_IP:127.0.0.1}
 
 ## Database
 spring.jpa.hibernate.ddl-auto=none
@@ -11,5 +10,6 @@ spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Kafka
+kafka.ip=${KAFKA_IP:127.0.0.1}
 kafka.bootstrap.servers.port=${BOOTSTRAP_SERVERS_PORT:9092}
 kafka.schema.registry.port=${SCHEMA_REGISTRY_PORT:8081}
